# sage_provoke

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
design_onboarding/: README.md  pyproject.toml
design_onboarding/src/design_onboarding/: crew.py  main.py
output/: problem_statement_prompt.md
sage-frontend/: .gitignore  index.html  jsconfig.json  package-lock.json  package.json
sage-frontend/src/: App.jsx  constants.js  index.css
src/: constants.py  crew.py  index.css  req.txt  server-bkp.py  server.py
src/agents/: 1_brainstorm_agent.py  brainstorm_agent_1.py  brainstorm_agent_2.py  creative_brief_agent_8.py  extractor_agent_1.py  inspiration_agent_7.py  opportunity_mapper_agent_6.py  persona_agent_5.py  prioritization_agent_3.py  refinement_agent_11.py  research_agent_4.py  sprint_planning_agent_13.py  user_story_agent_12.py  validation_agent_10.py  wireframe_agent_9.py
src/output/: brainstorm_concepts.md  creative_brief.md  inspiration_board.md  opportunity_map.md  persona_profile.md  prioritization_summary.md  problem_statement_prompt.md  refinement_suggestions.md  research_brief.md  sprint_plan.md  user_stories.md  validation_report.md  wireframe_prototype.md
src/prompts/: anna-prompt-step-2  anna-prompt-step-3  brainstorm_prompt_2.py  creative_brief_generator_prompt_8.py  extractor_prompt_1.py  inspiration_prompt_7.py  opportunity_mapper_prompt_6.py  persona_generator_prompt_5.py  prioritization_prompt_3.py  prompts.py  refinement_prompt_11.py  research_prompt_4.py  sprint_planning_prompt_13.py  (+3 more)
templates/: index.html
(+28 files in other folders)
